Fix button hover on dark mode

--- a/scss/_color-themes.scss
+++ b/scss/_color-themes.scss
@@ -19,7 +19,6 @@ html {
     &[data-theme="dark"] {
         --text-color: #{$text-color--dark};
         --background-color: #{$bg--dark};
-        --button-color--hover: #fff;
     }
 }
 
