--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,6 @@ html {
 html[data-theme=dark] {
   --text-color: #fff;
   --background-color: #222;
-  --button-color--hover: #fff;
 }
 
 .welcome-container {
